the_project/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-app
  labels:
    app: todo-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-app
  template:
    metadata:
      labels:
        app: todo-app
    spec:
      containers:
        - name: todo-app
          # Build locally with: docker build -t todo-app:1.13 ./the_project/todo-app
          image: todo-app:1.13
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
          volumeMounts:
            - name: image-cache
              mountPath: /cache
      volumes:
        - name: image-cache
          persistentVolumeClaim:
            claimName: shared-data-pvc
