the_project/manifest/nats.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
  namespace: project
  labels:
    app: nats
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nats
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
        - name: nats
          image: nats:2.10-alpine
          ports:
            - name: nats
              containerPort: 4222
---
apiVersion: v1
kind: Service
metadata:
  name: nats
  namespace: project
  labels:
    app: nats
spec:
  selector:
    app: nats
  ports:
    - name: nats
      port: 4222
      targetPort: 4222
