the_project/manifest/postgres-statefulset.yaml
apiVersion: v1
kind: Service
metadata:
  name: project-postgres
  namespace: project
  labels:
    app: project-postgres
spec:
  ports:
    - name: postgres
      port: 5432
  clusterIP: None
  selector:
    app: project-postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: project-postgres
  namespace: project
spec:
  serviceName: project-postgres
  replicas: 1
  selector:
    matchLabels:
      app: project-postgres
  template:
    metadata:
      labels:
        app: project-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16-alpine
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - name: postgres-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: postgres-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1Gi
