the_project/manifest/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app
  namespace: project
  labels:
    app: todo-app
spec:
  type: ClusterIP
  selector:
    app: todo-app
  ports:
    - name: http
      port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend
  namespace: project
  labels:
    app: todo-backend
spec:
  type: ClusterIP
  selector:
    app: todo-backend
  ports:
    - name: http
      port: 4000
      targetPort: 4000
---
apiVersion: v1
kind: Service
metadata:
  name: broadcaster
  namespace: project
  labels:
    app: broadcaster
spec:
  type: ClusterIP
  selector:
    app: broadcaster
  ports:
    - name: http
      port: 8080
      targetPort: 8080
